src/objects/Environment__c.object
<CustomObject>
    <fields>
        <fullName>Cloud_Customer__c</fullName>
        <formula>Engagement__r.Cloud_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cloud Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <label>Engagement</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Environment_Action__c</fullName>
        <formula>IF(Upgrade_Created__c = True, &quot;&quot;,
HYPERLINK(&quot;/&quot; &amp; &quot;a1E/e&quot; &amp;
&quot;?&quot; &amp;
&quot;&amp;RecordType=&quot; &amp; &quot;012E0000000DCA8&quot; &amp;
&quot;&amp;Name=&quot; &amp; Name &amp;
&quot;&amp;CF00NE00000038WfV=&quot; &amp; Engagement__r.Name &amp;
&quot;&amp;CF00NE00000038WfV_lkid=&quot; &amp; Engagement__r.Id &amp;
&quot;&amp;00NE00000038Wgr=&quot; &amp; TEXT(Type__c) &amp;
&quot;&amp;CF00NL0000003JKoQ=&quot; &amp; Name &amp;
&quot;&amp;CF00NL0000003JKoQ_lkid=&quot; &amp; Id &amp;
&quot;&amp;retURL=%2F&quot; &amp; Engagement__r.Id &amp;
&quot;&amp;saveURL=%2F&quot; &amp; Id &amp; &quot;%2Fe?%2600NL0000003JYUG%3D1%26save%3D1%26saveURL%3D&quot; &amp; Engagement__r.Id,&quot;Create Upgrade&quot;, &quot;_top&quot;)
)</formula>
        <label>Environment Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Hosting_Location__c</fullName>
        <formula>TEXT(Original_Environment__r.Hosting_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Hosting Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_MSTR_Version__c</fullName>
        <formula>TEXT(Original_Environment__r.MSTR_Version__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From MSTR Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDR_Ticket_Num__c</fullName>
        <description>Provide a link to the HDR ticket # for quick reference</description>
        <inlineHelpText>Provide a link to the HDR ticket # for quick reference</inlineHelpText>
        <label>HDR Ticket #</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hosting_Location__c</fullName>
        <description>Enter the Hosting Location where the customer environment should be created</description>
        <inlineHelpText>Enter the Hosting Location where the customer environment should be created</inlineHelpText>
        <label>Hosting Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ashburn, VA 3.0</fullName>
                    <default>true</default>
                    <label>Ashburn, VA 3.0</label>
                </value>
                <value>
                    <fullName>Ashburn, VA 1.0</fullName>
                </value>
                <value>
                    <fullName>AWS Dublin</fullName>
                </value>
                <value>
                    <fullName>AWS Northern California</fullName>
                </value>
                <value>
                    <fullName>AWS North Virginia</fullName>
                </value>
                <value>
                    <fullName>AWS Oregon</fullName>
                </value>
                <value>
                    <fullName>AWS Singapore</fullName>
                </value>
                <value>
                    <fullName>AWS Sydney</fullName>
                </value>
                <value>
                    <fullName>London, England 1.0</fullName>
                </value>
                <value>
                    <fullName>Seattle, WA 3.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INFA_Power_Center_Connectors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark this box if the customer purchased additional Power Center connectors</description>
        <inlineHelpText>Mark this box if the customer purchased additional Power Center connectors</inlineHelpText>
        <label>INFA Power Center Connectors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSTRCI_LDAP_Server__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box indicates whether the customer is using our MSTRCI provided LDAP server or has otherwise their own LDAP Server or other user management strategy.</description>
        <inlineHelpText>Uncheck this box if the customer is using their own LDAP server or has otherwise their own user management strategy.</inlineHelpText>
        <label>MSTRCI LDAP Server</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSTR_Version__c</fullName>
        <description>This is the current version of MSTR installed on the customer environment</description>
        <inlineHelpText>Select the current version of MSTR installed on the customer environment</inlineHelpText>
        <label>MSTR Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10.5 HF1</fullName>
                </value>
                <value>
                    <fullName>10.5</fullName>
                </value>
                <value>
                    <fullName>10.4 HF1</fullName>
                </value>
                <value>
                    <fullName>10.4</fullName>
                </value>
                <value>
                    <fullName>10.3 HF1</fullName>
                </value>
                <value>
                    <fullName>10.3</fullName>
                </value>
                <value>
                    <fullName>10.2 HF1</fullName>
                </value>
                <value>
                    <fullName>10.2</fullName>
                </value>
                <value>
                    <fullName>10.1 HF1</fullName>
                </value>
                <value>
                    <fullName>10.1</fullName>
                </value>
                <value>
                    <fullName>10 HF1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF9</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF8</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF7</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF6</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF5</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF4</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF3</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF2</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF1</fullName>
                </value>
                <value>
                    <fullName>9.4.1 GA</fullName>
                </value>
                <value>
                    <fullName>9.4.0</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF4</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF3</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF2</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF1</fullName>
                </value>
                <value>
                    <fullName>9.3.1</fullName>
                </value>
                <value>
                    <fullName>9.3.0 HF4</fullName>
                </value>
                <value>
                    <fullName>9.3.0 HF3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <description>This field tracks the current stage the Environment is in</description>
        <inlineHelpText>This field tracks the current stage the Environment is in</inlineHelpText>
        <label>Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scope Complete</fullName>
                </value>
                <value>
                    <fullName>Customer Initiated Request</fullName>
                </value>
                <value>
                    <fullName>Work-Order Created</fullName>
                </value>
                <value>
                    <fullName>Checklist Completed</fullName>
                </value>
                <value>
                    <fullName>Work-Order Submitted</fullName>
                </value>
                <value>
                    <fullName>VMs Created</fullName>
                </value>
                <value>
                    <fullName>Application(s) Installed</fullName>
                </value>
                <value>
                    <fullName>VPN Setup</fullName>
                </value>
                <value>
                    <fullName>Website DNS Setup</fullName>
                </value>
                <value>
                    <fullName>Configuration Complete</fullName>
                </value>
                <value>
                    <fullName>Build Complete - QA</fullName>
                </value>
                <value>
                    <fullName>Customer Validation In Progress</fullName>
                </value>
                <value>
                    <fullName>Customer Confirmed Environment</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_AZ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-AZ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_DB_Storage__c</fullName>
        <label>Non-DB Storage (GB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Upgrades</relationshipLabel>
        <relationshipName>Original_Environment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <formula>Quote__r.QuoteId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>QuoteDetails__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>Enter the Date when the upgraded environment was released to the customer</description>
        <inlineHelpText>Enter the Date when the upgraded environment was released to the customer</inlineHelpText>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>Enter the Date when the customer requested the upgrade</description>
        <inlineHelpText>Enter the Date when the customer requested the upgrade</inlineHelpText>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box indicates whether the customer bought the SDK component</description>
        <inlineHelpText>This box indicates whether the customer bought the SDK component</inlineHelpText>
        <label>SDK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Sign_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark this box if the customer purchased the SSO option to access their cloud environment</description>
        <inlineHelpText>Mark this box if the customer purchased the SSO option to access their cloud environment</inlineHelpText>
        <label>Single Sign On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client Provided</fullName>
                </value>
                <value>
                    <fullName>Informatica Cloud</fullName>
                </value>
                <value>
                    <fullName>Informatica PowerCenter</fullName>
                </value>
                <value>
                    <fullName>MySQL</fullName>
                </value>
                <value>
                    <fullName>Netezza</fullName>
                </value>
                <value>
                    <fullName>ParAccel</fullName>
                </value>
                <value>
                    <fullName>Redshift</fullName>
                </value>
                <value>
                    <fullName>Snowflake</fullName>
                </value>
                <value>
                    <fullName>SQL Server</fullName>
                </value>
                <value>
                    <fullName>SSIS</fullName>
                </value>
                <value>
                    <fullName>Teradata</fullName>
                </value>
                <value>
                    <fullName>Vertica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Ticket_Num__c</fullName>
        <description>Provide a link to the support central case # for quick reference</description>
        <inlineHelpText>Provide a link to the support central case # for quick reference</inlineHelpText>
        <label>Support Ticket #</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>Data Integration</fullName>
                </value>
                <value>
                    <fullName>IaaS</fullName>
                </value>
                <value>
                    <fullName>Metadata</fullName>
                </value>
                <value>
                    <fullName>Non-database Storage</fullName>
                </value>
                <value>
                    <fullName>Usher</fullName>
                </value>
                <value>
                    <fullName>Utility Box</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgrade_End_Date__c</fullName>
        <description>Enter the Date when the upgrade was finished</description>
        <inlineHelpText>Enter the Date when the upgrade was finished</inlineHelpText>
        <label>Upgrade End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upgrade Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Environments (Upgrade Environment)</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upgrade_Start_Date__c</fullName>
        <description>Enter the Date when the upgrade was started</description>
        <inlineHelpText>Enter the Date when the upgrade was started</inlineHelpText>
        <label>Upgrade Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgraded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgraded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Date__c</fullName>
        <description>Enter the Date when the customer validated the upgraded environment as having been successfully upgraded</description>
        <inlineHelpText>Enter the Date when the customer validated the upgraded environment as having been successfully upgraded</inlineHelpText>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <label>Environment</label>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upgrade</fullName>
        <active>true</active>
        <label>Upgrade</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Non_DB_Storage_Selected</fullName>
        <active>true</active>
        <description>Non-DB Storage can be entered only when the type equals Non-database Storage.</description>
        <errorConditionFormula>NOT(ISPICKVAL(Type__c, &quot;Non-database Storage&quot;)) &amp;&amp; NOT(ISBLANK(Non_DB_Storage__c))</errorConditionFormula>
        <errorDisplayField>Non_DB_Storage__c</errorDisplayField>
        <errorMessage>Non-DB Storage can be entered only when the environment type equals Non-database Storage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Power_Center_Connector_Available</fullName>
        <active>true</active>
        <description>The Power Center Connector can be selected when the sub-type equals Informatica PowerCenter</description>
        <errorConditionFormula>AND(
INFA_Power_Center_Connectors__c = True,
NOT(ISPICKVAL(Sub_Type__c,&quot;Informatica PowerCenter&quot;))
)</errorConditionFormula>
        <errorDisplayField>INFA_Power_Center_Connectors__c</errorDisplayField>
        <errorMessage>The INFA Power Center Connectors can not be selected unless this environment is Data Integration - Informatica PowerCenter.</errorMessage>
    </validationRules>
</CustomObject>